Fixed the theme_prevnext method appending the page navigation /page/n to the pages url (navigation from home). The method now checks if the current matched rule is a page and only appends the page number to that url. Fixed the new posts list adding an extra 'page/'. Added overflow:hidden to the nav menul ul to prevent displaying excess page links in an additional row.
git-svn-id: http://svn.habariproject.org/habari-extras@30 f4a90942-1786-4aa1-b092-57c31935ddc3

--- a/themes/charcoal/style.css
+++ b/themes/charcoal/style.css
@@ -154,6 +154,7 @@ p {
 	display: block;
 	margin-left:1px;
 	margin-right:3px;
+	overflow:hidden;
 	
 }
 
